<resources>
    <string name="app_name">MPL Demo</string>

    <!-- Strings related to MPL Demo -->
    <string name="mpl_demo">MPL Demo</string>
    <string name="initializing_paypal">Please Wait. Initializing PayPal Library...</string>
    <string name="exit_app">Go Back</string>
    <string name="enter_email">Enter Recipient Email:</string>
    <string name="enter_amount">Enter Amount to Pay:</string>
    <string name="continue_to_payment">Continue</string>
    <string name="pp_initialization_failure">Could not initialize the PayPal library. Check your application permissions.</string>

    <string name="title_activity_create_account">CreateAccount</string>

    <!-- Strings related to login/Create account -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="mismatching_passwords">The passwords must match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_my_groups">MyGroups</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
