<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/payActivityContent"
    tools:context="com.example.housecore.housecore.PayActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:id="@+id/layoutSimplePayment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/mpl_demo"
            android:id="@+id/labelSimplePayment"
            android:textSize="30dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:visibility="visible"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/initializing_paypal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/extra"
            android:gravity="center_horizontal"
            android:textSize="12dp"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paypalButtonWrapper"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/exitApp"
                android:text="@string/exit_app"
                android:onClick="onClick">
            </Button>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
